--- a/src/api/view/html/public/index.html
+++ b/src/api/view/html/public/index.html
@@ -4,16 +4,25 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1>Home Page</h1> 
-        <script src="" async defer></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+    <script type="module" src="auth.js"></script>
+</head>
+
+<body>
+    <h1>Home Page</h1>
+    <script src="" async defer></script>
+    <div class="row">
+        <input id="email-label"/>
+        <input id="password-label"/>
+        <button id="login-btn">Login</button>        
+    </div>
+</body>
+
 </html>
